[package]
name = "ergo-node-interface"
version = "0.2.7"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A library which makes interacting with and using an Ergo Node simple for dApp developers."
repository = "https://github.com/ergoplatform/ergo-node-interface-rust"
readme = "README.md"
keywords = ["ergo", "blockchain", "node-interface", "dApp"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json                = "0.12.4"
openssl             = { version = "0.10", features = ["vendored"] }
reqwest             = { version = "0.11.4", features = ["blocking"] }
serde_json          = "1.0.59"
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "b06c6aa38715a0232e76498124f3260c320b3b88" }
thiserror           = "1.0.22"
blake2b_simd        = "0.5.11"
base16              = "0.2.1"
yaml-rust           = "0.4.4"
