[package]
name = "ergo-node-interface"
version = "0.4.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A library which makes interacting with and using an Ergo Node simple for dApp developers."
repository = "https://github.com/ergoplatform/ergo-node-interface-rust"
readme = "README.md"
keywords = ["ergo", "blockchain", "node-interface", "dApp"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
json = "0.12.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "1.14", features = ["json"] }
ergo-lib = { version = "0.23" }
# ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "26ca5c4dddc96186f767e09ea1885b675c70e0f3" }
blake2b_simd = "0.5.11"
base16 = "0.2.1"
yaml-rust = "0.4.4"
thiserror = "1.0.22"
derive_more = "0.99"

[dev-dependencies]
expect-test = "1.0.1"
